2009-11-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix minor bug in `slc'.

	When running with `slc -g -g' the underlying compiler would be
	confused. (reported by A. Matei)
	
	* tools/bin/cce.in: Properly split `slc_debug_flags' into an
	array.

2009-11-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve `slr' to allow more debugging.
	
	* tools/bin/slr.in: New option `-gd' to debug data generation.

2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor improvements to data input via `slr' and `sag'.
	
	* tools/lib/arggen.c: Optimize by using a parallel loop (suggested
	by M. Lankamp)

	* tools/bin/sag: Define functions `v', `vu' and `vl' for uses in
	Fibre data files.

2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Simplify handling of C99's `restrict'.

	* tools/include/slc.m4: Move definition of `restrict' to...	
	* tools/lib/t-ptl/include/sl_support.h: ...here.

2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Eliminate some warnings in library code.

	* lib/src/io.c: Use the primitives from `cmath.h' to test for
	infinity.

	* lib/src/mtsep.c: Cast 0 properly to make a pointer.
	
2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Do not warn about `ctime.h' when including `svp/perf.h'.

	* lib/include/ctime.h: Subject warning to conditional.
	* lib/include/svp/perf.h: Set conditional accordingly.

2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix code generation for `-b utcx -EE'.

	* tools/bin/cce.in: Provide compiler for `-b utcx', so that `slc
	-EE' can pass preprocessing.

	* tools/lib/t-utc/include/sl_support.h: Provide (empty) since it
	is required by `-EE'.
	
	* tools/lib/t-utc/slimpl.m4: Add more whitespace to make output
	more palatable.

2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Optimize the `seqc' target.
	
	* tools/lib/t-seqc/slimpl.m4: Use `long' for index values.

2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Optimize the `ptl' target.
	
	* tools/lib/host-host-ptl/include/create.tpl,