@@ -21,21 +21,27 @@
 #include "data.c"
 #endif
 
+#ifdef __mt_freestanding__
 sl_def(do_print, void, sl_shparm(long, tok))
 {
   sl_index(i);
-  const char *ptr = (const char*)(void*)i;
+  const char *ptr = (const char*)(void*)(long)i;
   char c = *ptr;
   long t = sl_getp(tok);
   output_char(c, 1);
   sl_setp(tok, t);
 }
 sl_enddef
+#endif
 
 sl_def(t_main, void)
 {
+#ifdef __mt_freestanding__
   sl_create(,, (long)&__slr_data, ((long)&__slr_data)+sizeof(__slr_data),,,,
 	    do_print, sl_sharg(long, , 0));
   sl_sync();
+#else
+  output_bytes(&__slr_data, sizeof(__slr_data), 1);
+#endif
 }
 sl_enddef
